[i18n] integrate new translations + new i18n check #70193 (#70423)
Co-authored-by: Elastic Machine <elasticmachine@users.noreply.github.com>
# Conflicts:
#	x-pack/plugins/translations/translations/ja-JP.json
#	x-pack/plugins/translations/translations/zh-CN.json

--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -501,6 +501,8 @@
     "console.welcomePage.supportedRequestFormatTitle": "Console 理解紧凑格式的请求，类似于 cURL：",
     "core.application.appNotFound.pageDescription": "在此 URL 未找到任何应用程序。尝试返回或从菜单中选择应用。",
     "core.application.appNotFound.title": "未找到应用程序",
+    "core.chrome.browserDeprecationLink": "我们网站上的支持矩阵",
+    "core.chrome.browserDeprecationWarning": "本软件的未来版本将放弃对 Internet Explorer 的支持，请查看{link}。",
     "core.chrome.legacyBrowserWarning": "您的浏览器不满足 Kibana 的安全要求。",
     "core.euiBasicTable.selectAllRows": "选择所有行",
     "core.euiBasicTable.selectThisRow": "选择此行",
@@ -636,7 +638,7 @@
     "core.ui.chrome.sideGlobalNav.viewRecentItemsLabel": "最近查看",
     "core.ui.EmptyRecentlyViewed": "没有最近查看的项目",
     "core.ui.kibanaNavList.label": "Kibana",
-    "core.ui.legacyBrowserMessage": "此 Kibana 安装启用了当前浏览器未满足的严格安全要求。",
+    "core.ui.legacyBrowserMessage": "此 Elastic 安装启用了当前浏览器未满足的严格安全要求。",
     "core.ui.legacyBrowserTitle": "请升级您的浏览器",
     "core.ui.managementNavList.label": "管理",
     "core.ui.observabilityNavList.label": "可观测性",
@@ -2217,7 +2219,7 @@
     "home.tutorials.zookeeperMetrics.nameTitle": "Zookeeper 指标",
     "home.tutorials.zookeeperMetrics.shortDescription": "从 Zookeeper 服务器提取内部指标。",
     "home.welcomeHomePageHeader": "Kibana 主页",
-    "home.welcomeTitle": "欢迎使用 Elastic Kibana",
+    "home.welcomeTitle": "欢迎使用 Elastic",
     "indexPatternManagement.editIndexPattern.createIndex.defaultButtonDescription": "对任何数据执行完全聚合",
     "indexPatternManagement.editIndexPattern.createIndex.defaultButtonText": "标准索引模式",
     "indexPatternManagement.editIndexPattern.createIndex.defaultTypeName": "索引模式",
@@ -4787,6 +4789,7 @@
     "xpack.apm.datePicker.last90DaysLabel": "过去 90 天",
     "xpack.apm.emptyMessage.noDataFoundDescription": "尝试其他时间范围或重置搜索筛选。",
     "xpack.apm.emptyMessage.noDataFoundLabel": "未找到任何数据",
+    "xpack.apm.environment.allLabel": "全部",
     "xpack.apm.error.prompt.body": "有关详情，请查看您的浏览器开发者控制台。",
     "xpack.apm.error.prompt.title": "抱歉，发生错误 :(",
     "xpack.apm.errorGroupDetails.culpritLabel": "原因",
@@ -4803,9 +4806,11 @@
     "xpack.apm.errorGroupDetails.viewOccurrencesInDiscoverButtonLabel": "在 Discover 查看 {occurrencesCount} 个 {occurrencesCount, plural, one {匹配项} other {匹配项}}。",
     "xpack.apm.errorRateAlert.name": "错误率",
     "xpack.apm.errorRateAlert.thresholdMet": "阈值已达到",
+    "xpack.apm.errorRateAlertTrigger.environment": "环境",
     "xpack.apm.errorRateAlertTrigger.errors": "错误",
     "xpack.apm.errorRateAlertTrigger.isAbove": "高于",
     "xpack.apm.errorsTable.errorMessageAndCulpritColumnLabel": "错误消息和原因",
+    "xpack.apm.errorsTable.groupIdColumnDescription": "堆栈跟踪的哈希。将类似错误分组在一起，即使因动态参数造成错误消息不同。",
     "xpack.apm.errorsTable.groupIdColumnLabel": "组 ID",
     "xpack.apm.errorsTable.latestOccurrenceColumnLabel": "最新一次发生",
     "xpack.apm.errorsTable.noErrorsLabel": "未找到任何错误",
@@ -5171,6 +5176,7 @@
     "xpack.apm.transactionDurationAlert.aggregationType.avg": "平均值",
     "xpack.apm.transactionDurationAlert.name": "事务持续时间",
     "xpack.apm.transactionDurationAlert.thresholdMet": "阈值已达到",
+    "xpack.apm.transactionDurationAlertTrigger.environment": "环境",
     "xpack.apm.transactionDurationAlertTrigger.isAbove": "高于",
     "xpack.apm.transactionDurationAlertTrigger.ms": "ms",
     "xpack.apm.transactionDurationAlertTrigger.type": "类型",
@@ -6185,8 +6191,9 @@
     "xpack.canvas.uis.views.pie.args.holeTitle": "内半径",
     "xpack.canvas.uis.views.pie.args.labelRadiusLabel": "标签到饼图中心的距离",
     "xpack.canvas.uis.views.pie.args.labelRadiusTitle": "标签半径",
+    "xpack.canvas.uis.views.pie.args.labelsLabel": "显示/隐藏标签",
     "xpack.canvas.uis.views.pie.args.labelsTitle": "标签",
-    "xpack.canvas.uis.views.pie.args.labelsToggleSwitch": "显示/隐藏标签",
+    "xpack.canvas.uis.views.pie.args.labelsToggleSwitch": "显示标签",
     "xpack.canvas.uis.views.pie.args.legendLabel": "禁用或定位图例",
     "xpack.canvas.uis.views.pie.args.legendTitle": "图例",
     "xpack.canvas.uis.views.pie.args.radiusLabel": "饼图半径",
@@ -6250,16 +6257,19 @@
     "xpack.canvas.uis.views.shape.args.borderWidthTitle": "边框宽度",
     "xpack.canvas.uis.views.shape.args.fillLabel": "接受 HEX、RGB 或 HTML 颜色名称",
     "xpack.canvas.uis.views.shape.args.fillTitle": "填充",
-    "xpack.canvas.uis.views.shape.args.maintainAspectLabel": "启用可保持纵横比",
-    "xpack.canvas.uis.views.shape.args.maintainAspectTitle": "固定比率",
+    "xpack.canvas.uis.views.shape.args.maintainAspectHelpLabel": "启用可保持纵横比",
+    "xpack.canvas.uis.views.shape.args.maintainAspectLabel": "使用固定比率",
+    "xpack.canvas.uis.views.shape.args.maintainAspectTitle": "纵横比设置",
     "xpack.canvas.uis.views.shape.args.shapeTitle": "选择形状",
     "xpack.canvas.uis.views.shapeTitle": "形状",
     "xpack.canvas.uis.views.table.args.paginateLabel": "显示或隐藏分页控制。如果禁用，仅第一页显示",
     "xpack.canvas.uis.views.table.args.paginateTitle": "分页",
+    "xpack.canvas.uis.views.table.args.paginateToggleSwitch": "显示分页控件",
     "xpack.canvas.uis.views.table.args.perPageLabel": "每个表页面要显示的行数",
     "xpack.canvas.uis.views.table.args.perPageTitle": "行",
     "xpack.canvas.uis.views.table.args.showHeaderLabel": "显示或隐藏具有每列标题的标题行",
     "xpack.canvas.uis.views.table.args.showHeaderTitle": "标题",
+    "xpack.canvas.uis.views.table.args.showHeaderToggleSwitch": "显示标题行",
     "xpack.canvas.uis.views.tableLabel": "设置表元素的样式",
     "xpack.canvas.uis.views.tableTitle": "表样式",
     "xpack.canvas.uis.views.timefilter.args.columnConfirmButtonLabel": "设置",
@@ -8026,6 +8036,11 @@
     "xpack.indexLifecycleMgmt.editPolicy.createPolicyMessage": "创建索引生命周期策略",
     "xpack.indexLifecycleMgmt.editPolicy.creationDaysOptionLabel": "天（自索引创建）",
     "xpack.indexLifecycleMgmt.editPolicy.creationHoursOptionLabel": "小时（自索引创建）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMicroSecondsOptionLabel": "微秒（自索引创建）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMilliSecondsOptionLabel": "毫秒（自索引创建）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMinutesOptionLabel": "分钟（自索引创建）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationNanoSecondsOptionLabel": "纳秒（自索引创建）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationSecondsOptionLabel": "秒（自索引创建）",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.activateWarmPhaseSwitchLabel": "激活删除阶段",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.deletePhaseDescriptionText": "您不再需要自己的索引。 您可以定义安全删除它的时间。",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.deletePhaseLabel": "删除阶段",
@@ -8273,7 +8288,7 @@
     "xpack.infra.errorPage.tryAgainDescription ": "请点击后退按钮，然后重试。",
     "xpack.infra.errorPage.unexpectedErrorTitle": "糟糕！",
     "xpack.infra.featureRegistry.linkInfrastructureTitle": "指标",
-    "xpack.infra.featureRegistry.linkLogsTitle": "鏃ュ織",
+    "xpack.infra.featureRegistry.linkLogsTitle": "日志",
     "xpack.infra.groupByDisplayNames.availabilityZone": "可用区",
     "xpack.infra.groupByDisplayNames.cloud.region": "地区",
     "xpack.infra.groupByDisplayNames.hostName": "主机",
@@ -8293,7 +8308,7 @@
     "xpack.infra.header.infrastructureHelpAppName": "指标",
     "xpack.infra.header.infrastructureNavigationTitle": "指标",
     "xpack.infra.header.infrastructureTitle": "指标",
-    "xpack.infra.header.logsTitle": "鏃ュ織",
+    "xpack.infra.header.logsTitle": "日志",
     "xpack.infra.homePage.documentTitle": "指标",
     "xpack.infra.homePage.inventoryTabTitle": "库存",
     "xpack.infra.homePage.metricsExplorerTabTitle": "指标浏览器",
@@ -8626,6 +8641,8 @@
     "xpack.infra.metrics.alertFlyout.aggregationText.count": "文档计数",
     "xpack.infra.metrics.alertFlyout.aggregationText.max": "最大值",
     "xpack.infra.metrics.alertFlyout.aggregationText.min": "最小值",
+    "xpack.infra.metrics.alertFlyout.aggregationText.p95": "第 95 个百分位",
+    "xpack.infra.metrics.alertFlyout.aggregationText.p99": "第 99 个百分位",
     "xpack.infra.metrics.alertFlyout.aggregationText.rate": "比率",
     "xpack.infra.metrics.alertFlyout.aggregationText.sum": "求和",
     "xpack.infra.metrics.alertFlyout.alertName": "指标阈值",
@@ -8636,6 +8653,7 @@
     "xpack.infra.metrics.alertFlyout.error.aggregationRequired": "“聚合”必填。",
     "xpack.infra.metrics.alertFlyout.error.metricRequired": "指标必填。",
     "xpack.infra.metrics.alertFlyout.error.thresholdRequired": "“阈值”必填。",
+    "xpack.infra.metrics.alertFlyout.error.thresholdTypeRequired": "阈值必须包含有效数字。",
     "xpack.infra.metrics.alertFlyout.error.timeRequred": "“时间大小”必填。",
     "xpack.infra.metrics.alertFlyout.expandRowLabel": "展开行。",
     "xpack.infra.metrics.alertFlyout.expression.for.descriptionLabel": "对于",
@@ -8672,6 +8690,8 @@
     "xpack.infra.metrics.alerting.threshold.okState": "正常 [已恢复]",
     "xpack.infra.metrics.alerting.threshold.outsideRangeComparator": "不介于",
     "xpack.infra.metrics.alerting.threshold.thresholdRange": "{a} 和 {b}",
+    "xpack.infra.metrics.alerts.dataTimeRangeLabel": "过去 {lookback} {timeLabel}",
+    "xpack.infra.metrics.alerts.dataTimeRangeLabelWithGrouping": "{id} 过去 {lookback} {timeLabel}的数据",
     "xpack.infra.metrics.alerts.loadingMessage": "正在加载",
     "xpack.infra.metrics.alerts.thresholdLabel": "阈值",
     "xpack.infra.metrics.alerts.timeLabels.days": "天",
@@ -8764,7 +8784,7 @@
     "xpack.infra.registerFeatures.infraOpsDescription": "浏览常用服务器、容器和服务的基础设施指标和日志。",
     "xpack.infra.registerFeatures.infraOpsTitle": "指标",
     "xpack.infra.registerFeatures.logsDescription": "实时流式传输日志或在类似控制台的工具中滚动浏览历史视图。",
-    "xpack.infra.registerFeatures.logsTitle": "鏃ュ織",
+    "xpack.infra.registerFeatures.logsTitle": "日志",
     "xpack.infra.sampleDataLinkLabel": "日志",
     "xpack.infra.savedView.defaultViewName": "默认值",
     "xpack.infra.savedView.errorOnCreate.duplicateViewName": "具有该名称的视图已存在。",
@@ -9226,6 +9246,9 @@
     "xpack.ingestManager.epm.addDatasourceButtonText": "创建数据源",
     "xpack.ingestManager.epm.browseAllButtonText": "浏览所有集成",
     "xpack.ingestManager.epm.illustrationAltText": "Elastic 集成的图示",
+    "xpack.ingestManager.epm.packageDetailsNav.datasourcesLinkText": "数据源",
+    "xpack.ingestManager.epm.packageDetailsNav.overviewLinkText": "概览",
+    "xpack.ingestManager.epm.packageDetailsNav.settingsLinkText": "设置",
     "xpack.ingestManager.epm.pageSubtitle": "浏览集成以了解热门应用和服务。",
     "xpack.ingestManager.epm.pageTitle": "Elastic 集成",
     "xpack.ingestManager.epmList.allFilterLinkText": "全部",
@@ -9370,7 +9393,7 @@
     "xpack.ingestPipelines.form.cancelButtonLabel": "取消",
     "xpack.ingestPipelines.form.createButtonLabel": "创建管道",
     "xpack.ingestPipelines.form.descriptionFieldDescription": "此功能的作用描述。",
-    "xpack.ingestPipelines.form.descriptionFieldLabel": "描述",
+    "xpack.ingestPipelines.form.descriptionFieldLabel": "描述（可选）",
     "xpack.ingestPipelines.form.descriptionFieldTitle": "描述",
     "xpack.ingestPipelines.form.hideRequestButtonLabel": "隐藏请求",
     "xpack.ingestPipelines.form.nameDescription": "此管道的唯一标识符。",
@@ -9623,6 +9646,7 @@
     "xpack.lens.pieChart.showCategoriesLabel": "内部或外部",
     "xpack.lens.pieChart.showFormatterValuesLabel": "显示值",
     "xpack.lens.pieChart.showPercentValuesLabel": "显示百分比",
+    "xpack.lens.pieChart.showTreemapCategoriesLabel": "显示标签",
     "xpack.lens.resetLayer": "重置图层",
     "xpack.lens.sugegstion.refreshSuggestionLabel": "刷新",
     "xpack.lens.suggestion.refreshSuggestionTooltip": "基于选定可视化刷新建议。",
@@ -10638,13 +10662,15 @@
     "xpack.ml.dataFrame.analyticsList.emptyPromptButtonText": "创建您的首个数据帧分析作业",
     "xpack.ml.dataFrame.analyticsList.emptyPromptTitle": "未找到任何数据帧分析作业",
     "xpack.ml.dataFrame.analyticsList.errorPromptTitle": "获取数据帧分析列表时发生错误。",
+    "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.phase": "阶段",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.progress": "进度",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.state": "状态",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.stats": "统计",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettingsLabel": "作业详情",
     "xpack.ml.dataframe.analyticsList.experimentalBadgeLabel": "实验性",
     "xpack.ml.dataframe.analyticsList.experimentalBadgeTooltipContent": "数据帧分析为实验功能。我们很乐意听取您的反馈意见。",
-    "xpack.ml.dataframe.analyticsList.progress": "每步骤进度",
+    "xpack.ml.dataframe.analyticsList.progress": "进度",
+    "xpack.ml.dataframe.analyticsList.progressOfPhase": "阶段 {currentPhase} 的进度：{progress}%",
     "xpack.ml.dataframe.analyticsList.refreshButtonLabel": "刷新",
     "xpack.ml.dataframe.analyticsList.rowCollapse": "隐藏 {analyticsId} 的详情",
     "xpack.ml.dataframe.analyticsList.rowExpand": "显示 {analyticsId} 的详情",
@@ -11131,6 +11157,7 @@
     "xpack.ml.jobsList.jobDetails.forecastsTable.viewLabel": "查看",
     "xpack.ml.jobsList.jobDetails.generalTitle": "常规",
     "xpack.ml.jobsList.jobDetails.influencersTitle": "影响因素",
+    "xpack.ml.jobsList.jobDetails.jobTimingStatsTitle": "作业计时统计",
     "xpack.ml.jobsList.jobDetails.modelSizeStatsTitle": "模型大小统计",
     "xpack.ml.jobsList.jobDetails.nodeTitle": "节点",
     "xpack.ml.jobsList.jobDetails.noPermissionToViewDatafeedPreviewTitle": "您无权查看数据馈送预览",
@@ -11302,6 +11329,7 @@
     "xpack.ml.models.jobValidation.messages.jobIdInvalidMessage": "作业 ID 无效.其可以包含小写字母数字（a-z 和 0-9）字符、连字符或下划线，且必须以字母数字字符开头和结尾。",
     "xpack.ml.models.jobValidation.messages.jobIdValidHeading": "作业 ID 格式有效",
     "xpack.ml.models.jobValidation.messages.jobIdValidMessage": "小写字母数字（a-z 和 0-9）字符、连字符或下划线，以字母数字字符开头和结尾，且长度不超过 {maxLength, plural, one {# 个字符} other {# 个字符}}。",
+    "xpack.ml.models.jobValidation.messages.mmlGreaterThanEffectiveMaxMmlMessage": "因为模型内存限制高于 {effectiveMaxModelMemoryLimit}，所以作业将无法在当前集群中运行。",
     "xpack.ml.models.jobValidation.messages.mmlGreaterThanMaxMmlMessage": "模型内存限制大于为此集群配置的最大模型内存限制。",
     "xpack.ml.models.jobValidation.messages.mmlValueInvalidMessage": "{mml} 不是有效的模型内存限制值。该值需要至少 1MB，且应以字节为单位（例如 10MB）指定。",
     "xpack.ml.models.jobValidation.messages.skippedExtendedTestsMessage": "已跳过其他检查，因为未满足作业配置的基本要求。",
@@ -12187,7 +12215,7 @@
     "xpack.monitoring.cluster.overview.esPanel.jobsLabel": "作业",
     "xpack.monitoring.cluster.overview.esPanel.jvmHeapLabel": "{javaVirtualMachine} 堆",
     "xpack.monitoring.cluster.overview.esPanel.logsLinkAriaLabel": "Elasticsearch 日志",
-    "xpack.monitoring.cluster.overview.esPanel.logsLinkLabel": "鏃ュ織",
+    "xpack.monitoring.cluster.overview.esPanel.logsLinkLabel": "日志",
     "xpack.monitoring.cluster.overview.esPanel.nodesTotalLinkLabel": "节点：{nodesTotal}",
     "xpack.monitoring.cluster.overview.esPanel.overviewLinkAriaLabel": "Elasticsearch 概览",
     "xpack.monitoring.cluster.overview.esPanel.overviewLinkLabel": "概览",
@@ -12445,7 +12473,7 @@
     "xpack.monitoring.license.heading": "许可证",
     "xpack.monitoring.license.howToUpdateLicenseDescription": "要更新此集群的许可，请通过 Elasticsearch {apiText} 提供许可文件：",
     "xpack.monitoring.license.licenseRouteTitle": "许可证",
-    "xpack.monitoring.logs.listing.calloutLinkText": "鏃ュ織",
+    "xpack.monitoring.logs.listing.calloutLinkText": "日志",
     "xpack.monitoring.logs.listing.calloutTitle": "想要查看更多日志？",
     "xpack.monitoring.logs.listing.clusterPageDescription": "显示此集群最新的日志，总共最多 {limit} 个日志。",
     "xpack.monitoring.logs.listing.componentTitle": "组件",
@@ -13836,7 +13864,7 @@
     "xpack.security.login.basicLoginForm.passwordFormRowLabel": "密码",
     "xpack.security.login.basicLoginForm.unknownErrorMessage": "糟糕！错误。重试。",
     "xpack.security.login.basicLoginForm.usernameFormRowLabel": "用户名",
-    "xpack.security.login.loggedOutDescription": "您已注销 Kibana。",
+    "xpack.security.login.loggedOutDescription": "您已注销 Elastic。",
     "xpack.security.login.sessionExpiredDescription": "您的会话已超时。请重新登录。",
     "xpack.security.loginAppTitle": "登录",
     "xpack.security.loginPage.esUnavailableMessage": "请参阅 Kibana 日志了解详情，然后尝试重新加载页面。",
@@ -13852,7 +13880,7 @@
     "xpack.security.loginPage.requiresSecureConnectionTitle": "登录需要安全连接",
     "xpack.security.loginPage.unknownLayoutMessage": "请参阅 Kibana 日志了解详情，然后尝试重新加载页面。",
     "xpack.security.loginPage.unknownLayoutTitle": "登录窗体布局不支持。",
-    "xpack.security.loginPage.welcomeTitle": "欢迎使用 Elastic Kibana",
+    "xpack.security.loginPage.welcomeTitle": "欢迎使用 Elastic",
     "xpack.security.loginPage.xpackUnavailableMessage": "要使用此 Kibana 发行版中全部免费功能，请将 Elasticsearch 更新为默认发行版。",
     "xpack.security.loginPage.xpackUnavailableTitle": "当前无法连接到为 Kibana 配置的 Elasticsearch 集群。",
     "xpack.security.loginWithElasticsearchLabel": "通过 Elasticsearch 登录",
@@ -17471,10 +17499,12 @@
     "xpack.uptime.alerts.monitorStatus.filters.usingPort": "使用端口",
     "xpack.uptime.alerts.monitorStatus.filters.with": "使用",
     "xpack.uptime.alerts.monitorStatus.filters.withTag": "具有标记",
+    "xpack.uptime.alerts.monitorStatus.monitorCallOut.title": "此告警将应用到大约 {snapshotCount} 个监测。",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.anyMonitors.description": "任何监测关闭 >",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.ariaLabel": "打开弹出框以输入已关闭计数",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.matchingMonitors.description": "匹配的监测关闭 >",
     "xpack.uptime.alerts.monitorStatus.numTimesField.ariaLabel": "输入触发告警的已关闭计数",
+    "xpack.uptime.alerts.monitorStatus.oldAlertCallout.title": "您正在编辑较旧的告警，某些字段可能不自动填充。",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.days": "天",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.hours": "小时",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.minutes": "分钟",
@@ -17615,6 +17645,7 @@
     "xpack.uptime.monitorList.infraIntegrationAction.kubernetes.message": "显示 Pod 指标",
     "xpack.uptime.monitorList.infraIntegrationAction.kubernetes.tooltip": "在 Infrastructure UI 上查找 Pod UID“{podUid}”",
     "xpack.uptime.monitorList.integrationGroup.emptyMessage": "没有可用的集成应用程序",
+    "xpack.uptime.monitorList.loading": "正在加载……",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.id": "显示容器日志",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.message": "显示容器日志",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.tooltip": "在 Logging UI 上查找容器 ID“{containerId}”",
@@ -17697,9 +17728,13 @@
     "xpack.uptime.pingList.statusOptions.downStatusOptionLabel": "关闭",
     "xpack.uptime.pingList.statusOptions.upStatusOptionLabel": "运行",
     "xpack.uptime.pluginDescription": "运行时间监测",
+    "xpack.uptime.settings.blank.error": "不能为空。",
+    "xpack.uptime.settings.blankNumberField.error": "必须为数字。",
     "xpack.uptime.settings.cannotEditText": "您的用户当前对 Uptime 应用有“读取”权限。启用“全部”权限级别以编辑这些设置。",
     "xpack.uptime.settings.cannotEditTitle": "您无权编辑设置。",
     "xpack.uptime.settings.error.couldNotSave": "无法保存设置！",
+    "xpack.uptime.settings.invalid.error": "值必须大于 0。",
+    "xpack.uptime.settings.invalid.nanError": "值必须为整数。",
     "xpack.uptime.settings.returnToOverviewLinkLabel": "返回到概览",
     "xpack.uptime.settingsBreadcrumbText": "设置",
     "xpack.uptime.snapshot.donutChart.ariaLabel": "显示当前状态的饼图。{total} 个监测中有 {down} 个已关闭。",
@@ -17718,8 +17753,10 @@
     "xpack.uptime.snapshotHistogram.yAxis.title": "Ping",
     "xpack.uptime.snapshotHistogram.yAxisId": "Ping Y 轴",
     "xpack.uptime.sourceConfiguration.ageLimit.units.days": "天",
+    "xpack.uptime.sourceConfiguration.ageLimitThresholdInput.ariaLabel": "该输入控制 Kibana 显示警告之前 TLS 证书有效的最大天数。",
     "xpack.uptime.sourceConfiguration.ageThresholdDefaultValue": "默认值为 {defaultValue}",
     "xpack.uptime.sourceConfiguration.applySettingsButtonLabel": "应用更改",
+    "xpack.uptime.sourceConfiguration.certificateExpirationThresholdInput.ariaLabel": "该输入控制 Kibana 显示警告之前离 TLS 证书到期剩余的最小天数。",
     "xpack.uptime.sourceConfiguration.certificateThresholdDescription": "更改显示并告警证书错误的阈值。注意：这会影响任何配置的告警。",
     "xpack.uptime.sourceConfiguration.certificationSectionTitle": "证书到期",
     "xpack.uptime.sourceConfiguration.discardSettingsButtonLabel": "取消",
