--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -501,6 +501,8 @@
     "console.welcomePage.supportedRequestFormatTitle": "コンソールは cURL と同様に、コンパクトなフォーマットのリクエストを理解できます。",
     "core.application.appNotFound.pageDescription": "この URL にアプリケーションが見つかりませんでした。前の画面に戻るか、メニューからアプリを選択してみてください。",
     "core.application.appNotFound.title": "アプリケーションが見つかりません",
+    "core.chrome.browserDeprecationLink": "Web サイトのサポートマトリックス",
+    "core.chrome.browserDeprecationWarning": "このソフトウェアの将来のバージョンでは、Internet Explorerのサポートが削除されます。{link}をご確認ください。",
     "core.chrome.legacyBrowserWarning": "ご使用のブラウザが Kibana のセキュリティ要件を満たしていません。",
     "core.euiBasicTable.selectAllRows": "すべての行を選択",
     "core.euiBasicTable.selectThisRow": "この行を選択",
@@ -636,7 +638,7 @@
     "core.ui.chrome.sideGlobalNav.viewRecentItemsLabel": "最近閲覧",
     "core.ui.EmptyRecentlyViewed": "最近閲覧したアイテムはありません",
     "core.ui.kibanaNavList.label": "Kibana",
-    "core.ui.legacyBrowserMessage": "この Kibana インストレーションは、現在ご使用のブラウザが満たしていない厳格なセキュリティ要件が有効になっています。",
+    "core.ui.legacyBrowserMessage": "このElasticインストレーションは、現在ご使用のブラウザが満たしていない厳格なセキュリティ要件が有効になっています。",
     "core.ui.legacyBrowserTitle": "ブラウザをアップグレードしてください",
     "core.ui.managementNavList.label": "管理",
     "core.ui.observabilityNavList.label": "オブザーバビリティ",
@@ -2214,7 +2216,7 @@
     "home.tutorials.zookeeperMetrics.nameTitle": "Zookeeper メトリック",
     "home.tutorials.zookeeperMetrics.shortDescription": "Zookeeper サーバーから内部メトリックを取得します。",
     "home.welcomeHomePageHeader": "Kibana ホーム",
-    "home.welcomeTitle": "Elastic Kibana へようこそ",
+    "home.welcomeTitle": "Elasticへようこそ",
     "indexPatternManagement.editIndexPattern.createIndex.defaultButtonDescription": "すべてのデータに完全アグリゲーションを実行",
     "indexPatternManagement.editIndexPattern.createIndex.defaultButtonText": "標準インデックスパターン",
     "indexPatternManagement.editIndexPattern.createIndex.defaultTypeName": "インデックスパターン",
@@ -4784,6 +4786,7 @@
     "xpack.apm.datePicker.last90DaysLabel": "過去 90 日間",
     "xpack.apm.emptyMessage.noDataFoundDescription": "別の時間範囲を試すか検索フィルターをリセットしてください。",
     "xpack.apm.emptyMessage.noDataFoundLabel": "データが見つかりません。",
+    "xpack.apm.environment.allLabel": "すべて",
     "xpack.apm.error.prompt.body": "詳細はブラウザの開発者コンソールをご確認ください。",
     "xpack.apm.error.prompt.title": "申し訳ございませんが、エラーが発生しました :(",
     "xpack.apm.errorGroupDetails.culpritLabel": "原因",
@@ -4800,9 +4803,11 @@
     "xpack.apm.errorGroupDetails.viewOccurrencesInDiscoverButtonLabel": "ディスカバリで {occurrencesCount} 件の{occurrencesCount, plural, one {ドキュメント} other {ドキュメント}}を表示。",
     "xpack.apm.errorRateAlert.name": "エラー率",
     "xpack.apm.errorRateAlert.thresholdMet": "しきい値一致",
+    "xpack.apm.errorRateAlertTrigger.environment": "環境",
     "xpack.apm.errorRateAlertTrigger.errors": "エラー",
     "xpack.apm.errorRateAlertTrigger.isAbove": "の下限は",
     "xpack.apm.errorsTable.errorMessageAndCulpritColumnLabel": "エラーメッセージと原因",
+    "xpack.apm.errorsTable.groupIdColumnDescription": "スタックトレースのハッシュ。動的パラメータのため、エラーメッセージが異なる場合でも、類似したエラーをグループ化します。",
     "xpack.apm.errorsTable.groupIdColumnLabel": "グループ ID",
     "xpack.apm.errorsTable.latestOccurrenceColumnLabel": "最近のオカレンス",
     "xpack.apm.errorsTable.noErrorsLabel": "エラーが見つかりませんでした",
@@ -5168,6 +5173,7 @@
     "xpack.apm.transactionDurationAlert.aggregationType.avg": "平均",
     "xpack.apm.transactionDurationAlert.name": "トランザクション期間",
     "xpack.apm.transactionDurationAlert.thresholdMet": "しきい値一致",
+    "xpack.apm.transactionDurationAlertTrigger.environment": "環境",
     "xpack.apm.transactionDurationAlertTrigger.isAbove": "の下限は",
     "xpack.apm.transactionDurationAlertTrigger.ms": "ms",
     "xpack.apm.transactionDurationAlertTrigger.type": "タイプ",
@@ -6181,8 +6187,9 @@
     "xpack.canvas.uis.views.pie.args.holeTitle": "内半径",
     "xpack.canvas.uis.views.pie.args.labelRadiusLabel": "円グラフの中心からラベルまでの距離です",
     "xpack.canvas.uis.views.pie.args.labelRadiusTitle": "ラベル半径",
+    "xpack.canvas.uis.views.pie.args.labelsLabel": "ラベルの表示・非表示",
     "xpack.canvas.uis.views.pie.args.labelsTitle": "ラベル",
-    "xpack.canvas.uis.views.pie.args.labelsToggleSwitch": "ラベルの表示・非表示",
+    "xpack.canvas.uis.views.pie.args.labelsToggleSwitch": "ラベルを表示",
     "xpack.canvas.uis.views.pie.args.legendLabel": "凡例の無効化・配置",
     "xpack.canvas.uis.views.pie.args.legendTitle": "凡例",
     "xpack.canvas.uis.views.pie.args.radiusLabel": "円グラフの半径",
@@ -6246,16 +6253,19 @@
     "xpack.canvas.uis.views.shape.args.borderWidthTitle": "境界線の幅",
     "xpack.canvas.uis.views.shape.args.fillLabel": "HEX、RGB、また HTML 色名が使用できます",
     "xpack.canvas.uis.views.shape.args.fillTitle": "塗りつぶし",
-    "xpack.canvas.uis.views.shape.args.maintainAspectLabel": "アスペクト比を維持するために有効にします",
-    "xpack.canvas.uis.views.shape.args.maintainAspectTitle": "固定比率",
+    "xpack.canvas.uis.views.shape.args.maintainAspectHelpLabel": "アスペクト比を維持するために有効にします",
+    "xpack.canvas.uis.views.shape.args.maintainAspectLabel": "固定比率を使用",
+    "xpack.canvas.uis.views.shape.args.maintainAspectTitle": "アスペクト比設定",
     "xpack.canvas.uis.views.shape.args.shapeTitle": "形状の選択",
     "xpack.canvas.uis.views.shapeTitle": "図形",
     "xpack.canvas.uis.views.table.args.paginateLabel": "ページ付けコントロールの表示・非表示を切り替えます。無効の場合、初めのページのみが表示されます",
     "xpack.canvas.uis.views.table.args.paginateTitle": "ページ付け",
+    "xpack.canvas.uis.views.table.args.paginateToggleSwitch": "ページ付けコントロールを表示",
     "xpack.canvas.uis.views.table.args.perPageLabel": "各表ページに表示される行数です",
     "xpack.canvas.uis.views.table.args.perPageTitle": "行",
     "xpack.canvas.uis.views.table.args.showHeaderLabel": "各列のタイトルを含むヘッダー列の表示・非表示を切り替えます",
     "xpack.canvas.uis.views.table.args.showHeaderTitle": "ヘッダー",
+    "xpack.canvas.uis.views.table.args.showHeaderToggleSwitch": "ヘッダー行を表示",
     "xpack.canvas.uis.views.tableLabel": "表エレメントのスタイルを設定します",
     "xpack.canvas.uis.views.tableTitle": "表スタイル",
     "xpack.canvas.uis.views.timefilter.args.columnConfirmButtonLabel": "設定",
@@ -8021,6 +8031,11 @@
     "xpack.indexLifecycleMgmt.editPolicy.createPolicyMessage": "インデックスライフサイクルポリシーを作成します",
     "xpack.indexLifecycleMgmt.editPolicy.creationDaysOptionLabel": "インデックスの作成からの経過日数",
     "xpack.indexLifecycleMgmt.editPolicy.creationHoursOptionLabel": "インデックスの作成からの経過時間数",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMicroSecondsOptionLabel": "インデックスの作成からの経過時間（マイクロ秒）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMilliSecondsOptionLabel": "インデックスの作成からの経過時間（ミリ秒）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationMinutesOptionLabel": "インデックスの作成からの経過時間（分）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationNanoSecondsOptionLabel": "インデックスの作成からの経過時間（ナノ秒）",
+    "xpack.indexLifecycleMgmt.editPolicy.creationSecondsOptionLabel": "インデックスの作成からの経過時間（秒）",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.activateWarmPhaseSwitchLabel": "削除フェーズを有効にする",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.deletePhaseDescriptionText": "今後インデックスは必要ありません。 いつ安全に削除できるかを定義できます。",
     "xpack.indexLifecycleMgmt.editPolicy.deletePhase.deletePhaseLabel": "削除フェーズ",
@@ -8621,6 +8636,8 @@
     "xpack.infra.metrics.alertFlyout.aggregationText.count": "ドキュメントカウント",
     "xpack.infra.metrics.alertFlyout.aggregationText.max": "最高",
     "xpack.infra.metrics.alertFlyout.aggregationText.min": "最低",
+    "xpack.infra.metrics.alertFlyout.aggregationText.p95": "95パーセンタイル",
+    "xpack.infra.metrics.alertFlyout.aggregationText.p99": "99パーセンタイル",
     "xpack.infra.metrics.alertFlyout.aggregationText.rate": "レート",
     "xpack.infra.metrics.alertFlyout.aggregationText.sum": "合計",
     "xpack.infra.metrics.alertFlyout.alertName": "メトリックしきい値",
@@ -8631,6 +8648,7 @@
     "xpack.infra.metrics.alertFlyout.error.aggregationRequired": "集約が必要です。",
     "xpack.infra.metrics.alertFlyout.error.metricRequired": "メトリックが必要です。",
     "xpack.infra.metrics.alertFlyout.error.thresholdRequired": "しきい値が必要です。",
+    "xpack.infra.metrics.alertFlyout.error.thresholdTypeRequired": "しきい値には有効な数値を含める必要があります。",
     "xpack.infra.metrics.alertFlyout.error.timeRequred": "ページサイズが必要です。",
     "xpack.infra.metrics.alertFlyout.expandRowLabel": "行を展開します。",
     "xpack.infra.metrics.alertFlyout.expression.for.descriptionLabel": "対象",
@@ -8667,6 +8685,8 @@
     "xpack.infra.metrics.alerting.threshold.okState": "OK [回復済み]",
     "xpack.infra.metrics.alerting.threshold.outsideRangeComparator": "の間にない",
     "xpack.infra.metrics.alerting.threshold.thresholdRange": "{a}と{b}",
+    "xpack.infra.metrics.alerts.dataTimeRangeLabel": "過去{lookback} {timeLabel}",
+    "xpack.infra.metrics.alerts.dataTimeRangeLabelWithGrouping": "{id}のデータの過去{lookback} {timeLabel}",
     "xpack.infra.metrics.alerts.loadingMessage": "読み込み中",
     "xpack.infra.metrics.alerts.thresholdLabel": "しきい値",
     "xpack.infra.metrics.alerts.timeLabels.days": "日",
@@ -9221,6 +9241,9 @@
     "xpack.ingestManager.epm.addDatasourceButtonText": "データソースを作成",
     "xpack.ingestManager.epm.browseAllButtonText": "すべての統合を参照",
     "xpack.ingestManager.epm.illustrationAltText": "Elastic統合の例",
+    "xpack.ingestManager.epm.packageDetailsNav.datasourcesLinkText": "データソース",
+    "xpack.ingestManager.epm.packageDetailsNav.overviewLinkText": "概要",
+    "xpack.ingestManager.epm.packageDetailsNav.settingsLinkText": "設定",
     "xpack.ingestManager.epm.pageSubtitle": "一般的なアプリやサービスの統合を参照する",
     "xpack.ingestManager.epm.pageTitle": "Elastic統合",
     "xpack.ingestManager.epmList.allFilterLinkText": "すべて",
@@ -9365,7 +9388,7 @@
     "xpack.ingestPipelines.form.cancelButtonLabel": "キャンセル",
     "xpack.ingestPipelines.form.createButtonLabel": "パイプラインの作成",
     "xpack.ingestPipelines.form.descriptionFieldDescription": "このパイプラインの説明。",
-    "xpack.ingestPipelines.form.descriptionFieldLabel": "説明",
+    "xpack.ingestPipelines.form.descriptionFieldLabel": "説明（オプション）",
     "xpack.ingestPipelines.form.descriptionFieldTitle": "説明",
     "xpack.ingestPipelines.form.hideRequestButtonLabel": "リクエストを非表示",
     "xpack.ingestPipelines.form.nameDescription": "このパイプラインの固有の識別子です。",
@@ -9618,6 +9641,7 @@
     "xpack.lens.pieChart.showCategoriesLabel": "内部または外部",
     "xpack.lens.pieChart.showFormatterValuesLabel": "値を表示",
     "xpack.lens.pieChart.showPercentValuesLabel": "割合を表示",
+    "xpack.lens.pieChart.showTreemapCategoriesLabel": "ラベルを表示",
     "xpack.lens.resetLayer": "レイヤーをリセット",
     "xpack.lens.sugegstion.refreshSuggestionLabel": "更新",
     "xpack.lens.suggestion.refreshSuggestionTooltip": "選択したビジュアライゼーションに基づいて、候補を更新します。",
@@ -10633,13 +10657,15 @@
     "xpack.ml.dataFrame.analyticsList.emptyPromptButtonText": "最初のデータフレーム分析ジョブを作成",
     "xpack.ml.dataFrame.analyticsList.emptyPromptTitle": "データフレーム分析ジョブが見つかりませんでした",
     "xpack.ml.dataFrame.analyticsList.errorPromptTitle": "データフレーム分析リストの取得中にエラーが発生しました。",
+    "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.phase": "フェーズ",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.progress": "進捗",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.state": "ステータス",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettings.stats": "統計",
     "xpack.ml.dataframe.analyticsList.expandedRow.tabs.jobSettingsLabel": "ジョブの詳細",
     "xpack.ml.dataframe.analyticsList.experimentalBadgeLabel": "実験的",
     "xpack.ml.dataframe.analyticsList.experimentalBadgeTooltipContent": "データフレーム分析は実験段階の機能です。フィードバックをお待ちしています。",
-    "xpack.ml.dataframe.analyticsList.progress": "ステップごとの進行状況",
+    "xpack.ml.dataframe.analyticsList.progress": "進捗",
+    "xpack.ml.dataframe.analyticsList.progressOfPhase": "フェーズ{currentPhase}の進捗: {progress}%",
     "xpack.ml.dataframe.analyticsList.refreshButtonLabel": "更新",
     "xpack.ml.dataframe.analyticsList.rowCollapse": "{analyticsId}の詳細を非表示",
     "xpack.ml.dataframe.analyticsList.rowExpand": "{analyticsId}の詳細を表示",
@@ -11126,6 +11152,7 @@
     "xpack.ml.jobsList.jobDetails.forecastsTable.viewLabel": "表示",
     "xpack.ml.jobsList.jobDetails.generalTitle": "一般",
     "xpack.ml.jobsList.jobDetails.influencersTitle": "影響",
+    "xpack.ml.jobsList.jobDetails.jobTimingStatsTitle": "ジョブタイミング統計",
     "xpack.ml.jobsList.jobDetails.modelSizeStatsTitle": "モデルサイズ統計",
     "xpack.ml.jobsList.jobDetails.nodeTitle": "ノード",
     "xpack.ml.jobsList.jobDetails.noPermissionToViewDatafeedPreviewTitle": "データフィードのプレビューを表示するパーミッションがありません",
@@ -11297,6 +11324,7 @@
     "xpack.ml.models.jobValidation.messages.jobIdInvalidMessage": "ジョブ ID が無効です。アルファベットの小文字 (a-z と 0-9)、ハイフンまたはアンダーラインが使用でき、最初と最後を英数字にする必要があります。",
     "xpack.ml.models.jobValidation.messages.jobIdValidHeading": "ジョブ ID のフォーマットは有効です。",
     "xpack.ml.models.jobValidation.messages.jobIdValidMessage": "アルファベットの小文字 (a-z と 0-9)、ハイフンまたはアンダーライン、最初と最後を英数字にし、{maxLength, plural, one {# 文字} other {# 文字}}以内にする必要があります。",
+    "xpack.ml.models.jobValidation.messages.mmlGreaterThanEffectiveMaxMmlMessage": "現在のクラスターではジョブを実行できません。モデルメモリ上限が{effectiveMaxModelMemoryLimit}を超えています。",
     "xpack.ml.models.jobValidation.messages.mmlGreaterThanMaxMmlMessage": "モデルメモリー制限が、このクラスターに構成された最大モデルメモリー制限を超えています。",
     "xpack.ml.models.jobValidation.messages.mmlValueInvalidMessage": "{mml} はモデルメモリー制限の有効な値ではありません。この値は最低 1MB で、バイト (例: 10MB) で指定する必要があります。",
     "xpack.ml.models.jobValidation.messages.skippedExtendedTestsMessage": "ジョブの構成の基本要件が満たされていないため、他のチェックをスキップしました。",
@@ -13830,7 +13858,7 @@
     "xpack.security.login.basicLoginForm.passwordFormRowLabel": "パスワード",
     "xpack.security.login.basicLoginForm.unknownErrorMessage": "おっと！エラー。再試行してください。",
     "xpack.security.login.basicLoginForm.usernameFormRowLabel": "ユーザー名",
-    "xpack.security.login.loggedOutDescription": "Kibana からログアウトしました。",
+    "xpack.security.login.loggedOutDescription": "Elasticからログアウトしました。",
     "xpack.security.login.sessionExpiredDescription": "セッションがタイムアウトしました。再試行してください。",
     "xpack.security.loginAppTitle": "ログイン",
     "xpack.security.loginPage.esUnavailableMessage": "詳細は Kibana ログを確認し、このページを再度読み込んでみてください。",
@@ -13846,7 +13874,7 @@
     "xpack.security.loginPage.requiresSecureConnectionTitle": "ログインにはセキュアな接続が必要です",
     "xpack.security.loginPage.unknownLayoutMessage": "詳細は Kibana ログを確認し、このページを再度読み込んでみてください。",
     "xpack.security.loginPage.unknownLayoutTitle": "サポートされていないログインフォームレイアウト。",
-    "xpack.security.loginPage.welcomeTitle": "Elastic Kibana へようこそ",
+    "xpack.security.loginPage.welcomeTitle": "Elasticへようこそ",
     "xpack.security.loginPage.xpackUnavailableMessage": "この Kibana ディストリビューションの無料の機能をすべて使用するには、デフォルトの Elasticsearch をアップデートしてください。",
     "xpack.security.loginPage.xpackUnavailableTitle": "現在 Kibana に構成されている Elasticsearch クラスターへの接続をキャンセルします。",
     "xpack.security.loginWithElasticsearchLabel": "Elasticsearchでログイン",
@@ -17463,10 +17491,12 @@
     "xpack.uptime.alerts.monitorStatus.filters.usingPort": "ポートを使用",
     "xpack.uptime.alerts.monitorStatus.filters.with": "使用",
     "xpack.uptime.alerts.monitorStatus.filters.withTag": "タグを使用",
+    "xpack.uptime.alerts.monitorStatus.monitorCallOut.title": "このアラートは約{snapshotCount}個のモニターに適用されます。",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.anyMonitors.description": "任意のモニターがダウン >",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.ariaLabel": "ダウンカウントインプットのポップオーバーを開く",
     "xpack.uptime.alerts.monitorStatus.numTimesExpression.matchingMonitors.description": "一致するモニターがダウン >",
     "xpack.uptime.alerts.monitorStatus.numTimesField.ariaLabel": "アラートのトリガーに必要な停止回数を入力します",
+    "xpack.uptime.alerts.monitorStatus.oldAlertCallout.title": "古いアラートを編集しています。一部のフィールドは自動入力されない場合があります。",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.days": "日",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.hours": "時間",
     "xpack.uptime.alerts.monitorStatus.timerangeOption.minutes": "分",
@@ -17607,6 +17637,7 @@
     "xpack.uptime.monitorList.infraIntegrationAction.kubernetes.message": "ポッドメトリックを表示",
     "xpack.uptime.monitorList.infraIntegrationAction.kubernetes.tooltip": "ポッド UID「{podUid}」のインフラストラクチャ UI を確認します",
     "xpack.uptime.monitorList.integrationGroup.emptyMessage": "統合されたアプリケーションがありません",
+    "xpack.uptime.monitorList.loading": "読み込み中…",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.id": "コンテナーログを表示",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.message": "コンテナーログを表示",
     "xpack.uptime.monitorList.loggingIntegrationAction.container.tooltip": "コンテナー ID「{containerId}」のロギング UI を確認します",
@@ -17689,9 +17720,13 @@
     "xpack.uptime.pingList.statusOptions.downStatusOptionLabel": "ダウン",
     "xpack.uptime.pingList.statusOptions.upStatusOptionLabel": "アップ",
     "xpack.uptime.pluginDescription": "アップタイム監視",
+    "xpack.uptime.settings.blank.error": "空白にすることはできません。",
+    "xpack.uptime.settings.blankNumberField.error": "数値でなければなりません。",
     "xpack.uptime.settings.cannotEditText": "現在、このユーザーには Uptime アプリの「読み取り」権があります。これらの設定を編集するには「すべて」のパーミッションレベルを有効にします。",
     "xpack.uptime.settings.cannotEditTitle": "設定を編集するパーミッションがありません。",
     "xpack.uptime.settings.error.couldNotSave": "設定を保存できませんでした！",
+    "xpack.uptime.settings.invalid.error": "値は0よりも大きい値でなければなりません。",
+    "xpack.uptime.settings.invalid.nanError": "値は整数でなければなりません。",
     "xpack.uptime.settings.returnToOverviewLinkLabel": "概要に戻る",
     "xpack.uptime.settingsBreadcrumbText": "設定",
     "xpack.uptime.snapshot.donutChart.ariaLabel": "現在のステータスを表す円グラフ、{total}個中{down}個のモニターがダウンしています。",
@@ -17710,8 +17745,10 @@
     "xpack.uptime.snapshotHistogram.yAxis.title": "ピング",
     "xpack.uptime.snapshotHistogram.yAxisId": "ピングY軸",
     "xpack.uptime.sourceConfiguration.ageLimit.units.days": "日",
+    "xpack.uptime.sourceConfiguration.ageLimitThresholdInput.ariaLabel": "TLS証明書が有効である最大日数を制御するインプット。この期間を過ぎると、Kibanaで警告が表示されます。",
     "xpack.uptime.sourceConfiguration.ageThresholdDefaultValue": "デフォルト値は{defaultValue}です",
     "xpack.uptime.sourceConfiguration.applySettingsButtonLabel": "変更を適用",
+    "xpack.uptime.sourceConfiguration.certificateExpirationThresholdInput.ariaLabel": "TLS証明書の満了日までの最小日数を制御するインプット。この期間を過ぎると、Kibanaで警告が表示されます。",
     "xpack.uptime.sourceConfiguration.certificateThresholdDescription": "証明書エラーを表示し、アラートを通知するしきい値を変更します。注：すべての構成されたアラートに影響します。",
     "xpack.uptime.sourceConfiguration.certificationSectionTitle": "証明書の有効期限",
     "xpack.uptime.sourceConfiguration.discardSettingsButtonLabel": "キャンセル",
