--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -8319,7 +8319,7 @@
     "xpack.ingestManager.enrollmentTokensList.secretTitle": "密钥",
     "xpack.ingestManager.epm.browseAllButtonText": "浏览所有集成",
     "xpack.ingestManager.epm.illustrationAltText": "Elastic 集成的图示",
-    "xpack.ingestManager.epm.packageDetailsNav.datasourcesLinkText": "数据源",
+    "xpack.ingestManager.epm.packageDetailsNav.packageConfigsLinkText": "数据源",
     "xpack.ingestManager.epm.packageDetailsNav.overviewLinkText": "概览",
     "xpack.ingestManager.epm.packageDetailsNav.settingsLinkText": "设置",
     "xpack.ingestManager.epm.pageSubtitle": "浏览集成以了解热门应用和服务。",
