--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -3064,8 +3064,8 @@
     "visTypeTable.aggTable.exportLabel": "エクスポート:",
     "visTypeTable.aggTable.formattedLabel": "フォーマット済み",
     "visTypeTable.aggTable.rawLabel": "生",
-    "visTypeTable.directives.tableCellFilter.filterForValueTooltip": "値でフィルタリング",
-    "visTypeTable.directives.tableCellFilter.filterOutValueTooltip": "値を除外",
+    "visTypeTable.tableCellFilter.filterForValueTooltip": "値でフィルタリング",
+    "visTypeTable.tableCellFilter.filterOutValueTooltip": "値を除外",
     "visTypeTable.function.help": "表ビジュアライゼーション",
     "visTypeTable.params.defaultPercentageCol": "非表示",
     "visTypeTable.params.PercentageColLabel": "パーセンテージ列",
