--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -3067,8 +3067,8 @@
     "visTypeTable.aggTable.exportLabel": "导出：",
     "visTypeTable.aggTable.formattedLabel": "格式化",
     "visTypeTable.aggTable.rawLabel": "原始",
-    "visTypeTable.directives.tableCellFilter.filterForValueTooltip": "筛留值",
-    "visTypeTable.directives.tableCellFilter.filterOutValueTooltip": "筛除值",
+    "visTypeTable.tableCellFilter.filterForValueTooltip": "筛留值",
+    "visTypeTable.tableCellFilter.filterOutValueTooltip": "筛除值",
     "visTypeTable.function.help": "表可视化",
     "visTypeTable.params.defaultPercentageCol": "不显示",
     "visTypeTable.params.PercentageColLabel": "百分比列",
