--- a/docs/settings/reporting-settings.asciidoc
+++ b/docs/settings/reporting-settings.asciidoc
@@ -134,10 +134,34 @@ Examples of valid entries are "elastic.co", "*.elastic.co", ".elastic.co", ".ela
 [float]
 [[reporting-csv-settings]]
 ==== CSV settings
-[[xpack-reporting-csv]]`xpack.reporting.csv.maxSizeBytes`::
-The maximum size of a CSV file before being truncated. This setting exists to prevent
-large exports from causing performance and storage issues.
-Defaults to `10485760` (10mB)
+
+[cols="2*<"]
+|===
+| [[xpack-reporting-csv]] `xpack.reporting.csv.maxSizeBytes`
+  | The maximum size of a CSV file before being truncated. This setting exists to prevent
+  large exports from causing performance and storage issues.
+  Defaults to `10485760` (10mB).
+
+| `xpack.reporting.csv.scroll.size`
+  | Number of documents retrieved from {es} for each scroll iteration during a CSV 
+  export.
+  Defaults to `500`.
+
+| `xpack.reporting.csv.scroll.duration`
+  | Amount of time allowed before {kib} cleans the scroll context during a CSV export.
+  Defaults to `30s`.
+  
+| `xpack.reporting.csv.checkForFormulas`
+  | Enables a check that warns you when there's a potential formula involved in the output (=, -, +, and @ chars).
+  See OWASP: https://www.owasp.org/index.php/CSV_Injection
+  Defaults to `true`.
+  
+| `xpack.reporting.csv.enablePanelActionDownload`
+  | Enables CSV export from a saved search on a dashboard. This action is available in the dashboard 
+  panel menu for the saved search.
+  Defaults to `true`.
+
+|===
 
 [float]
 [[reporting-advanced-settings]]
