--- a/docs/management/managing-licenses.asciidoc
+++ b/docs/management/managing-licenses.asciidoc
@@ -5,15 +5,14 @@ When you install the default distribution of {kib}, you receive free features
 with no expiration date. For the full list of features, refer to
 https://www.elastic.co/subscriptions[the subscription page].
 
-If you want to try out the full set of features, you can activate a 30-day trial
-license. To view the status of your license, start a trial, or install a new
+If you want to try out the full set of features, you can activate a 30-day trial.
+To view the status of your license, start a trial, or install a new
 license, open the menu, then go to *Stack Management > {es} > License Management*.
 
 NOTE: You can start a trial only if your cluster has not already activated a
 trial license for the current major product version. For example, if you have
 already activated a trial for 6.0, you cannot start a new trial until
-7.0. You can, however, contact `info@elastic.co` to request an extended trial
-license.
+7.0. You can, however, contact `info@elastic.co` to request an extended trial.
 
 When you activate a new license level, new features appear in *Stack Management*.
 
