--- a/docs/drilldowns/explore-underlying-data.asciidoc
+++ b/docs/drilldowns/explore-underlying-data.asciidoc
@@ -18,7 +18,7 @@ the chart.
 
 Context menu "Explore underlying data" action will navigate you to Discover app,
 to the index pattern used in the visualization and will carry over all filters,
-query, and time range used in the visualization.
+query, and time range applied to the visualization.
 
 [role="screenshot"]
 image::images/explore_data_context_menu.png[Explore underlying data from panel context menu]
@@ -28,10 +28,10 @@ image::images/explore_data_context_menu.png[Explore underlying data from panel c
 === Explore data from chart action
 
 In-chart "Explore underlying data" action will also navigate you to Discover app,
-to the index pattern used in the visualization and will carry over all the
+to the index pattern used in the visualization and will carry over all
 filters, query and time range, but it will also apply the filters and time range
-created from the click or brush events that triggered this action to appear in
-context menu. For example, if you will brush a chart the time range associated
+created from the click or brush events that triggered this action. For example,
+if you will brush a chart the time range associated
 with that brush event will be carried over to Discover app.
 
 [role="screenshot"]
