--- a/docs/migration/migrate_8_0.asciidoc
+++ b/docs/migration/migrate_8_0.asciidoc
@@ -118,7 +118,7 @@ URL that it derived from the actual server address and `xpack.security.public` s
 [float]]
 === kibana.keystore has moved from the `data` folder to the `config` folder
 *Details:* By default, kibana.keystore has moved from the configured `path.data` folder to `<root>/config` for archive distributions
-and `/etc/kibana` for package distributions.
+and `/etc/kibana` for package distributions.  If a pre-existing keystore exists in the data directory that path will continue to be used.
 
 [float]
 [[breaking_80_user_role_changes]]
