--- a/docs/user/alerting/action-types/email.asciidoc
+++ b/docs/user/alerting/action-types/email.asciidoc
@@ -77,3 +77,117 @@ Email actions have the following configuration properties:
 To, CC, BCC::    Each is a list of addresses. Addresses can be specified in `user@host-name` format, or in `name <user@host-name>` format. One of To, CC, or BCC must contain an entry.
 Subject::       The subject line of the email.
 Message::       The message text of the email. Markdown format is supported.
+
+[[configuring-email]]
+==== Configuring email accounts
+
+Email action can send email using any SMTP email service.
+
+You configure the accounts Email action can use to send emails using the connector form.
+For more information about configuring Email connector to work with different email
+systems, see:
+
+* <<gmail>>
+* <<outlook>>
+* <<exchange>>
+* <<amazon-ses>>
+
+[float]
+[[gmail]]
+===== Sending email from Gmail
+
+Use the following email account settings to send email from the
+https://mail.google.com[Gmail] SMTP service:
+
+--------------------------------------------------
+  config:
+    host: smtp.gmail.com
+    port: 587
+    secure: true
+  secrets:
+    user: <username>
+    password: <password>
+--------------------------------------------------
+
+If you get an authentication error that indicates that you need to continue the
+sign-in process from a web browser when Email action attempts to send email, you need
+to configure Gmail to https://support.google.com/accounts/answer/6010255?hl=en[Allow
+Less Secure Apps to access your account].
+
+If two-step verification is enabled for your account, you must generate and use
+a unique App Password to send email from {watcher}. See
+https://support.google.com/accounts/answer/185833?hl=en[Sign in using App Passwords]
+for more information.
+
+[float]
+[[outlook]]
+===== Sending email from Outlook.com
+
+Use the following email account settings to send email action from the
+https://www.outlook.com/[Outlook.com] SMTP service:
+
+--------------------------------------------------
+config:
+    host: smtp-mail.outlook.com
+    port: 587
+    secure: true
+secrets:
+    user: <email.address>
+    password: <password>
+--------------------------------------------------
+
+When sending emails, you have to provide a from address, either a default one
+in your account configuration or as part of the email action in the watch.
+
+NOTE:   You need to use a unique App Password if two-step verification is enabled.
+        See http://windows.microsoft.com/en-us/windows/app-passwords-two-step-verification[App
+        passwords and two-step verification] for more information.
+
+[float]
+[[amazon-ses]]
+===== Sending email from Amazon SES (Simple Email Service)
+
+Use the following email account settings to send email from the
+http://aws.amazon.com/ses[Amazon Simple Email Service] (SES) SMTP service:
+
+--------------------------------------------------
+config:
+    host: email-smtp.us-east-1.amazonaws.com <1>
+    port: 587
+    secure: true
+secrets:
+    user: <username>
+    password: <password>
+--------------------------------------------------
+<1> `smtp.host` varies depending on the region
+
+NOTE:   You need to use your Amazon SES SMTP credentials to send email through
+        Amazon SES. For more information, see
+        http://docs.aws.amazon.com/ses/latest/DeveloperGuide/smtp-credentials.html[Obtaining
+        Your Amazon SES SMTP Credentials]. You might also need to verify
+        https://docs.aws.amazon.com/ses/latest/DeveloperGuide/verify-email-addresses.html[your email address]
+        or https://docs.aws.amazon.com/ses/latest/DeveloperGuide/verify-domains.html[your whole domain]
+        at AWS.
+
+[float]
+[[exchange]]
+===== Sending email from Microsoft Exchange
+
+Use the following email account settings to send email action from Microsoft
+Exchange:
+
+--------------------------------------------------
+config:
+    host: <your exchange server>
+    port: 587
+    secure: true
+    from: <email address of service account> <1>
+secrets:
+    user: <email address of service account> <2>
+    password: <password>
+--------------------------------------------------
+<1> Some organizations configure Exchange to validate that the `from` field is a
+    valid local email account.
+<2> Many organizations support use of your email address as your username, though
+    it is a good idea to check with your system administrator if you receive
+    authentication-related failures.
