--- a/docs/developer/architecture/index.asciidoc
+++ b/docs/developer/architecture/index.asciidoc
@@ -15,10 +15,10 @@ A few services also automatically generate api documentation which can be browse
 A few notable services are called out below.
 
 * <<development-security>>
-* <<add-data-guide>>
+* <<add-data-tutorials>>
 * <<development-visualize-index>>
 
-include::add-data-guide.asciidoc[]
+include::add-data-tutorials.asciidoc[]
 
 include::development-visualize-index.asciidoc[]
 
