[Uptime] Availability alert (#70284)
* Add new fields to monitor status alert for availability.

* Add UI code for availability threshold expression + translations/a11y fields.

* Add availability selection to alert UI.

* Disable expression popover button functionality when not enabled.

* Add select box for monitor status alert, reorganize layout.

* Add new runtime types for parsing in alert executor.

* Add new enablement field for monitor status checks.

* Add availability check query function and tests. Extract helper function from similar test file to generic file.

* Add availability checking to status check alert type.

* Change availability threshold to be number type.

* Remove clearing of fields when disabled.

* Change alert validation to require availability or status check.

* Fix threshold input functionality.

* Add tests and refine alert validation.

* Add test for new validation logic.

* Add any type temporarily.

* Delete unused code, fix types.

* Add filter capabilities to availability type.

* Disable availability by default for old alerts.

* Add filtering to availability query.

* Clean up types and refresh test snapshots.

* Change threshold storage value to string. Add bucket selector agg.

* Update copy.

* Add tests and improve should check flag evaluation.

* Improve old alert detection code.

* Fix issue with status check enablement.

* Update unit tests to reflect changes to query.

* Fix types.

* Improve tests, refactor a function to clean up code.

* Remove fields from aggregate key and retrieve them from top hits instead.

* Add sort parameter to top_hits aggregation.

* Update context message of monitor status alert, and add translations for availability message.

* Modify default alert message.

* Add a comment.

* Fix outdated translations.

* Revert unknown to any to simplify validation.

* Improve readability of array manipulation for availability result

--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -16374,7 +16374,7 @@
     "xpack.uptime.alerts.monitorStatus.addFilter.tag": "タグ",
     "xpack.uptime.alerts.monitorStatus.addFilter.type": "タイプ",
     "xpack.uptime.alerts.monitorStatus.clientName": "稼働状況の監視ステータス",
-    "xpack.uptime.alerts.monitorStatus.defaultActionMessage": "{contextMessage}\n前回トリガー日時：{lastTriggered}\n{downMonitors}",
+    "xpack.uptime.alerts.monitorStatus.defaultActionMessage": "{contextMessage}\n前回トリガー日時：{lastTriggered}\n",
     "xpack.uptime.alerts.monitorStatus.filterBar.ariaLabel": "監視状態アラートのフィルター基準を許可するインプット",
     "xpack.uptime.alerts.monitorStatus.filters.anyLocation": "任意の場所",
     "xpack.uptime.alerts.monitorStatus.filters.anyPort": "任意のポート",
