--- a/docs/user/alerting/action-types/slack.asciidoc
+++ b/docs/user/alerting/action-types/slack.asciidoc
@@ -53,8 +53,8 @@ URL, set up an an _Incoming Webhook Integration_ through the Slack console:
 . Go to https://my.slack.com/services/new/incoming-webhook.
 . Select a default channel for the integration.
 +
-image::images/slack-add-webhook-integration.jpg[]
+image::images/slack-add-webhook-integration.png[]
 . Click *Add Incoming Webhook Integration*.
 . Copy the generated webhook URL so you can paste it into your Slack connector form.
 +
-image::images/slack-copy-webhook-url.jpg[]
+image::images/slack-copy-webhook-url.png[]
