--- a/docs/api/saved-objects/import.asciidoc
+++ b/docs/api/saved-objects/import.asciidoc
@@ -17,7 +17,7 @@ experimental[] Create sets of {kib} saved objects from a file created by the exp
 ==== Path parameters
 
 `space_id`::
-  (Optional, string) An identifier for the space. If `space_id` is not provided in the URL, the default space is used.
+  (Optional, string) An identifier for the <<xpack-spaces,space>>. If `space_id` is not provided in the URL, the default space is used.
 
 [[saved-objects-api-import-query-params]]
 ==== Query parameters
@@ -238,9 +238,9 @@ object, or skipping this object entirely.
 
 * A visualization with a different ID but the same "origin" already exists, so this resulted in a conflict error as well. The
 `destinationId` field describes to the other visualization which caused this conflict. This behavior was added to ensure that new objects
-which can be shared between spaces behave in a similar way as legacy non-shareable objects. When a shareable object is exported and then
-imported into a new space, it retains its origin so that it conflicts will be encountered as expected. This can be resolved by overwriting
-the specified destination object, or skipping this object entirely.
+which can be shared between <<xpack-spaces,spaces>> behave in a similar way as legacy non-shareable objects. When a shareable object is
+exported and then imported into a new space, it retains its origin so that it conflicts will be encountered as expected. This can be
+resolved by overwriting the specified destination object, or skipping this object entirely.
 
 * Two canvases with different IDs but the same "origin" already exist, so this resulted in an ambiguous conflict error. The `destinations`
 array describes to the other canvases which caused this conflict. When a shareable object is exported and then imported into a new space,
