--- a/docs/developer/plugin-development.asciidoc
+++ b/docs/developer/plugin-development.asciidoc
@@ -3,7 +3,7 @@
 
 [IMPORTANT]
 ==============================================
-The Kibana plugin interfaces are in a state of constant development.  We cannot provide backwards compatibility for plugins due to the high rate of change.  Kibana enforces that the installed plugins match the version of Kibana itself.  Plugin developers will have to release a new version of their plugin for each new Kibana release as a result.
+The Kibana plugin interfaces are in a state of constant development.  We cannot provide backwards compatibility for plugin due to the high rate of change.  Kibana enforces that the installed plugins match the version of Kibana itself.  Plugin developers will have to release a new version of their plugin for each new Kibana release as a result.
 ==============================================
 
 * <<development-plugin-resources>>
@@ -11,6 +11,7 @@ The Kibana plugin interfaces are in a state of constant development.  We cannot 
 * <<development-plugin-feature-registration>>
 * <<development-plugin-functional-tests>>
 * <<development-plugin-localization>>
+* <<development-plugin-saved-objects>>
 
 include::plugin/development-plugin-resources.asciidoc[]
 
@@ -21,4 +22,6 @@ include::plugin/development-plugin-feature-registration.asciidoc[]
 include::plugin/development-plugin-functional-tests.asciidoc[]
 
 include::plugin/development-plugin-localization.asciidoc[]
+
+include::plugin/development-plugin-saved-objects.asciidoc[]
 
