Move screenshotting library

--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -20128,19 +20128,6 @@
     "xpack.reporting.redirectApp.redirectConsoleErrorPrefixLabel": "リダイレクトページエラー：",
     "xpack.reporting.registerFeature.reportingDescription": "Discover、可視化、ダッシュボードから生成されたレポートを管理します。",
     "xpack.reporting.registerFeature.reportingTitle": "レポート",
-    "xpack.reporting.screencapture.couldntFinishRendering": "{count} 件のビジュアライゼーションのレンダリングが完了するのを待つ間にエラーが発生しました。{error}",
-    "xpack.reporting.screencapture.couldntLoadKibana": "Kibana URLを開こうとするときにエラーが発生しました：{error}",
-    "xpack.reporting.screencapture.injectCss": "Kibana CSS をレポート用に更新しようとしたときにエラーが発生しました。{error}",
-    "xpack.reporting.screencapture.injectingCss": "カスタム css の投入中",
-    "xpack.reporting.screencapture.logWaitingForElements": "要素または項目のカウント属性を待ち、または見つからないため中断",
-    "xpack.reporting.screencapture.noElements": "ビジュアライゼーションパネルのページを読み取る間にエラーが発生しました：パネルが見つかりませんでした。",
-    "xpack.reporting.screencapture.readVisualizationsError": "ビジュアライゼーションパネル情報のページを読み取ろうとしたときにエラーが発生しました：{error}",
-    "xpack.reporting.screencapture.renderErrorsFound": "{count}件のエラーメッセージが見つかりました。詳細については、レポートオブジェクトを参照してください。",
-    "xpack.reporting.screencapture.renderIsComplete": "レンダリングが完了しました",
-    "xpack.reporting.screencapture.screenshotsTaken": "撮影したスクリーンショット：{numScreenhots}",
-    "xpack.reporting.screencapture.takingScreenshots": "スクリーンショットの撮影中",
-    "xpack.reporting.screencapture.waitingForRenderComplete": "レンダリングの完了を待っています",
-    "xpack.reporting.screencapture.waitingForRenderedElements": "レンダリングされた {itemsCount} 個の要素が DOM に入るのを待っています",
     "xpack.reporting.screenCapturePanelContent.canvasLayoutHelpText": "枠線とフッターロゴを削除",
     "xpack.reporting.screenCapturePanelContent.canvasLayoutLabel": "全ページレイアウト",
     "xpack.reporting.screenCapturePanelContent.optimizeForPrintingHelpText": "複数のページを使用します。ページごとに最大2のビジュアライゼーションが表示されます",
@@ -20447,6 +20434,19 @@
     "xpack.screenshotting.diagnostic.browserCrashed": "ブラウザーは起動中に異常終了しました",
     "xpack.screenshotting.diagnostic.browserErrored": "ブラウザープロセスは起動中にエラーが発生しました",
     "xpack.screenshotting.screencapture.browserWasClosed": "ブラウザーは予期せず終了しました。詳細については、サーバーログを確認してください。",
+    "xpack.screenshotting.screencapture.couldntFinishRendering": "{count} 件のビジュアライゼーションのレンダリングが完了するのを待つ間にエラーが発生しました。{error}",
+    "xpack.screenshotting.screencapture.couldntLoadKibana": "Kibana URLを開こうとするときにエラーが発生しました：{error}",
+    "xpack.screenshotting.screencapture.injectCss": "Kibana CSS をレポート用に更新しようとしたときにエラーが発生しました。{error}",
+    "xpack.screenshotting.screencapture.injectingCss": "カスタム css の投入中",
+    "xpack.screenshotting.screencapture.logWaitingForElements": "要素または項目のカウント属性を待ち、または見つからないため中断",
+    "xpack.screenshotting.screencapture.noElements": "ビジュアライゼーションパネルのページを読み取る間にエラーが発生しました：パネルが見つかりませんでした。",
+    "xpack.screenshotting.screencapture.readVisualizationsError": "ビジュアライゼーションパネル情報のページを読み取ろうとしたときにエラーが発生しました：{error}",
+    "xpack.screenshotting.screencapture.renderErrorsFound": "{count}件のエラーメッセージが見つかりました。詳細については、レポートオブジェクトを参照してください。",
+    "xpack.screenshotting.screencapture.renderIsComplete": "レンダリングが完了しました",
+    "xpack.screenshotting.screencapture.screenshotsTaken": "撮影したスクリーンショット：{numScreenhots}",
+    "xpack.screenshotting.screencapture.takingScreenshots": "スクリーンショットの撮影中",
+    "xpack.screenshotting.screencapture.waitingForRenderComplete": "レンダリングの完了を待っています",
+    "xpack.screenshotting.screencapture.waitingForRenderedElements": "レンダリングされた {itemsCount} 個の要素が DOM に入るのを待っています",
     "xpack.screenshotting.serverConfig.autoSet.sandboxDisabled": "Chromiumサンドボックスは保護が強化されていますが、{osName} OSではサポートされていません。自動的に'{configKey}: true'を設定しています。",
     "xpack.screenshotting.serverConfig.autoSet.sandboxEnabled": "Chromiumサンドボックスは保護が強化され、{osName} OSでサポートされています。自動的にChromiumサンドボックスを有効にしています。",
     "xpack.screenshotting.serverConfig.osDetected": "OSは'{osName}'で実行しています",
