--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -20421,19 +20421,6 @@
     "xpack.reporting.redirectApp.redirectConsoleErrorPrefixLabel": "重定向页面错误：",
     "xpack.reporting.registerFeature.reportingDescription": "管理您从 Discover、Visualize 和 Dashboard 生成的报告。",
     "xpack.reporting.registerFeature.reportingTitle": "Reporting",
-    "xpack.reporting.screencapture.couldntFinishRendering": "尝试等候 {count} 个可视化完成渲染时发生错误。{error}",
-    "xpack.reporting.screencapture.couldntLoadKibana": "尝试打开 Kibana URL 时发生错误：{error}",
-    "xpack.reporting.screencapture.injectCss": "尝试为 Reporting 更新 Kibana CSS 时发生错误。{error}",
-    "xpack.reporting.screencapture.injectingCss": "正在注入定制 css",
-    "xpack.reporting.screencapture.logWaitingForElements": "等候元素或项目计数属性；或未发现要中断",
-    "xpack.reporting.screencapture.noElements": "读取页面以获取可视化面板时发生了错误：未找到任何面板。",
-    "xpack.reporting.screencapture.readVisualizationsError": "尝试读取页面以获取可视化面板信息时发生错误：{error}",
-    "xpack.reporting.screencapture.renderErrorsFound": "找到 {count} 条错误消息。请参阅报告对象了解更多信息。",
-    "xpack.reporting.screencapture.renderIsComplete": "渲染已完成",
-    "xpack.reporting.screencapture.screenshotsTaken": "已捕获的屏幕截图：{numScreenhots}",
-    "xpack.reporting.screencapture.takingScreenshots": "正在捕获屏幕截图",
-    "xpack.reporting.screencapture.waitingForRenderComplete": "正在等候渲染完成",
-    "xpack.reporting.screencapture.waitingForRenderedElements": "正在等候 {itemsCount} 个已渲染元素进入 DOM",
     "xpack.reporting.screenCapturePanelContent.canvasLayoutHelpText": "删除边框和页脚徽标",
     "xpack.reporting.screenCapturePanelContent.canvasLayoutLabel": "全页面布局",
     "xpack.reporting.screenCapturePanelContent.optimizeForPrintingHelpText": "使用多页，每页最多显示 2 个可视化",
@@ -20752,6 +20739,19 @@
     "xpack.screenshotting.diagnostic.browserCrashed": "启动期间浏览器已异常退出",
     "xpack.screenshotting.diagnostic.browserErrored": "启动时浏览器进程引发了错误",
     "xpack.screenshotting.screencapture.browserWasClosed": "浏览器已意外关闭！有关更多信息，请查看服务器日志。",
+    "xpack.screenshotting.screencapture.couldntFinishRendering": "尝试等候 {count} 个可视化完成渲染时发生错误。{error}",
+    "xpack.screenshotting.screencapture.couldntLoadKibana": "尝试打开 Kibana URL 时发生错误：{error}",
+    "xpack.screenshotting.screencapture.injectCss": "尝试为 Reporting 更新 Kibana CSS 时发生错误。{error}",
+    "xpack.screenshotting.screencapture.injectingCss": "正在注入定制 css",
+    "xpack.screenshotting.screencapture.logWaitingForElements": "等候元素或项目计数属性；或未发现要中断",
+    "xpack.screenshotting.screencapture.noElements": "读取页面以获取可视化面板时发生了错误：未找到任何面板。",
+    "xpack.screenshotting.screencapture.readVisualizationsError": "尝试读取页面以获取可视化面板信息时发生错误：{error}",
+    "xpack.screenshotting.screencapture.renderErrorsFound": "找到 {count} 条错误消息。请参阅报告对象了解更多信息。",
+    "xpack.screenshotting.screencapture.renderIsComplete": "渲染已完成",
+    "xpack.screenshotting.screencapture.screenshotsTaken": "已捕获的屏幕截图：{numScreenhots}",
+    "xpack.screenshotting.screencapture.takingScreenshots": "正在捕获屏幕截图",
+    "xpack.screenshotting.screencapture.waitingForRenderComplete": "正在等候渲染完成",
+    "xpack.screenshotting.screencapture.waitingForRenderedElements": "正在等候 {itemsCount} 个已渲染元素进入 DOM",
     "xpack.screenshotting.serverConfig.autoSet.sandboxDisabled": "Chromium 沙盒提供附加保护层，但不受 {osName} OS 支持。自动设置“{configKey}: true”。",
     "xpack.screenshotting.serverConfig.autoSet.sandboxEnabled": "Chromium 沙盒提供附加保护层，受 {osName} OS 支持。自动启用 Chromium 沙盒。",
     "xpack.screenshotting.serverConfig.osDetected": "正在以下 OS 上运行：“{osName}”",
